--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "MIT",
     "dependencies": {
       "dotenv": "^10.0.0",
-      "@playwright/test": "^1.15.0"
+      "@playwright/test": "^1.15.0",
+      "monocart-reporter": "^1.2.0"
     }
   }
