--- a/setup.env
+++ b/setup.env
@@ -1,7 +1,7 @@
 # .env
-LOGIN_URL=https://example.com/login
+LOGIN_URL=<YOUR LOGIN PAGE HERE>
 USER_NAME=testuser
 PASSWORD=testpass
-HOMEPAGE_URL=https://example.com/home
+HOMEPAGE_URL=<LANDING PAGE AFTER LOGGING IN>
 BROWSER_TYPE=chromium
 HEADLESS=true
